--- a/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
+++ b/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
@@ -8,167 +8,41 @@
 
 @import '../../../../assets/style.less'; // added more ../, must be a better way!
 
-.menu-bar {
+// Define variables for colors and dimensions
+@lightBlue: #62aadb;
+@barHeight: 50px;
+@sectionWidth: 30%;
+
+// Styles for the bar box
+.submission-menu {
+  background-color: @lightBlue;
   display: flex;
   justify-content: space-between;
+  align-items: center; /* Align items vertically in the center */
+  height: @barHeight;
+  border-radius: 25px; // Apply border-radius for curved sides
+  overflow: hidden;
+  padding: 0 20px; // Add padding to create buffer space on both sides
 }
 
-#table-wrapper {
-  padding: 0 10vh;
+// Styles for the sections within the bar box
+.section {
+    flex: 1;
+    width: @sectionWidth;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0;
+    display: flex;
+    color: #colors[text-secondary];
+    height: auto;
+    background: #colors[secondary];
+    font-size: 1.2em;
+    text-align: center;
+    margin: 0 5px;
+
 }
 
-#activity-level-report-header {
-  color: #colors[text-secondary];
-  font-size: 3em;
-  font-weight: bolder;
-  margin-left: 5%;
-  margin-bottom: 1%;
-  text-align: left;
-  padding-top: 20px;
-}
-
-#gen-report-btn {
-  flex-direction: column;
-  width: fit-content;
-  align-self: center;
-  height: 45px;
-  margin: 20px 50px;
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 15px;
-  font-weight: 800;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.377);
-}
-
-.cards {
-  flex-direction: column;
-  margin-bottom: 2rem;
-}
-
-#activity-report-content-wrapper {
-  width: 80%;
-  margin: 2vh auto 0 auto;
-}
-
-#container-section-activity {
-  border: 2px solid #5babde;
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-}
-
-section {
-  background-color: white;
-  text-align: left;
-  padding: 2rem;
-}
-
-.activity-level-return {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 5.3vh;
-  margin: 20px 50px;
-  padding: 10px 20px;
-  border-radius: 30px;
-  font-size: 2.5vh;
-  font-weight: 500;
-  color: #colors[text-primary];
-  background-color: #colors[quaternary];
-  border: none;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.377);
-}
-
-#activity-level-dropdown {
-  font-size: x-large;
-  color: #262626;
-  font-weight: 500;
-}
-
-#report-menu-item {
-  text-align: right;
-  font-size: large;
-  color: #262626;
-  font-weight: 300;
-}
-
-label {
-  display: inline-block;
-}
-
-.filter-btn {
-  background-color: red;
-}
-
-.select {
-  padding: 4px 10px;
-  margin: 2px;
-  background-color: #fff;
-  border-color: grey;
-  border-radius: 10px;
-}
-
-.filter-show {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-
-  .filter-items {
-    width: fit-content;
-    background-color: #colors[tertiary];
-    border-radius: 4px;
-    border: solid 2px;
-    border-color: #colors[secondary];
-    padding: 20px;
-  }
-}
-
-.filter-hide {
-  display: none;
-}
-
-.filter-text {
-  color: #000;
-  margin: 0;
-}
-
-#show-filter-btn {
-  color: #colors[quaternary];
-  height: 10px;
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-  border: none;
-  font-weight: 500;
-  font-size: 18px;
-
-  &:hover {
-    color: #colors[quinary];
-    cursor: pointer;
-  }
-}
-
-.ant-btn.activity-level-submit {
-  background-color: #colors[quaternary];
-  height: fit-content;
-  margin: 8px 0 15px 0;
-  border: none;
-  border-radius: 20px;
-  font-weight: 500;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.377);
-
-  &:hover {
-    background-color: #colors[quinary];
-    cursor: pointer;
-  }
-}
-
-@media only screen and (max-width: 915px) {
-  #activity-level-return {
-    height: 110px;
-  }
+// Applying styles to individual sections
+.section1, .section2, .section3 {
+  .section;
 }
