--- a/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
+++ b/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
@@ -13,36 +13,75 @@
 @barHeight: 50px;
 @sectionWidth: 30%;
 
-// Styles for the bar box
+/* Styles for the submission menu */
 .submission-menu {
-  background-color: @lightBlue;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* Align items vertically in the center */
-  height: @barHeight;
-  border-radius: 25px; // Apply border-radius for curved sides
-  overflow: hidden;
-  padding: 0 20px; // Add padding to create buffer space on both sides
-}
-
-// Styles for the sections within the bar box
-.section {
+    background-color: @lightBlue;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px; /* Adjust height as needed */
+    border-radius: 25px;
+    overflow: hidden;
+    padding: 0 40px;
+  }
+  
+  /* Styles for the sections within the submission menu */
+  .section {
     flex: 1;
     width: @sectionWidth;
     justify-content: center;
     align-items: center;
-    margin-bottom: 0;
     display: flex;
-    color: #colors[text-secondary];
+    color: @lightBlue; /* Default text color */
     height: auto;
-    background: #colors[secondary];
+    background: transparent; /* Default background color */
     font-size: 1.2em;
     text-align: center;
     margin: 0 5px;
+    font-weight: 600;
 
-}
+    &:nth-child(2) {
+        flex: 2; /* Middle section, twice as large */
+      }
+    
+      &:not(:nth-child(2)) {
+        flex: 1; /* Outside sections */
+      }
+  
+    .ant-select {
+      width: @sectionWidth;
 
-// Applying styles to individual sections
-.section1, .section2, .section3 {
-  .section;
-}
+    }
+  
+    .ant-select-selector {
+      border: none;
+      border-radius: 4px;
+      padding: 8px 15px;
+      height: auto;
+      line-height: normal;
+      background-color: @lightBlue; /* Light blue background for dropdown selector */
+      color: black; /* Default text color */
+      font-size: 1.2em;
+      font-weight: 600;
+      &:hover,
+      &:focus {
+        border-color: transparent;
+        box-shadow: none;
+      }
+    }
+  
+    .ant-select-arrow {
+      color: #333; /* Default text color */
+    }
+  
+    .ant-select-dropdown {
+      background-color: transparent; /* Light blue background for dropdown menu */
+      .ant-select-item {
+        padding: 8px 15px;
+        font-size: 1.2em;
+        font-weight: 600;
+        color: white; /* Default text color */
+      }
+    }
+
+  }
