--- a/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
+++ b/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
@@ -108,5 +108,9 @@
         color: white; /* Default text color */
       }
     }
+  }
 
+  // Applying the styles to buttion name in top-bar
+  .AddFeedback, .Grades{
+    .top-bar;
   }
