--- a/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
+++ b/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
@@ -34,6 +34,7 @@
 .top-bar {
   background-color: @lightBlue; 
   display: flex;                  //  It makes the element a flex container, enabling you to use flex properties on its children
+  justify-content: flex-start;
   justify-content: space-between; // the items are evenly distributed
   align-items: center; 
   flex-direction: column;          /* Stack children vertically */
@@ -50,11 +51,23 @@
   border: none; 
   width: 100px; 
   height: 40px; 
+  margin: auto; 
   margin-left: 10px; 
-  margin-top: 5px;
+  margin-top: 10px;
   cursor: pointer;
 }
 
+.Rubric-button{
+  background-color: transparent; 
+  display: flex;                 
+  border: none; 
+  width: 100px; 
+  height: 40px; 
+  margin: auto; 
+  margin-left: 10px; 
+  margin-top: 10px;
+  cursor: pointer;
+}
 
 .comment-bar {
   background-color: @lightBlue; 
@@ -62,7 +75,7 @@
   justify-content: space-between; // the items are evenly distributed
   align-items: center; 
   flex-direction: column;          /* Stack children vertically */
-  height: 2cm; 
+  height: 1.5cm; 
   width: 20%;
   border-radius: 15px 15px 0px 0px; /* Apply border-radius for curved top corners */
   margin-left: 5%; /* Set margin-left to 0 to align to the left */
@@ -81,12 +94,11 @@
 }
 
 .comment-text{
-  font-family:  Arial; 
+  font-family:  Arial, Helvetica, sans-serif; 
   text-align: center;
-  font-weight: bold;
   font-size: 20px; 
   color: #454545; 
-  margin-top: 6%;
+  margin-top: 5%;
 }
   
   /* Styles for the sections within the submission menu */
