--- a/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
+++ b/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
@@ -50,10 +50,20 @@
   
 }
   
+.description-box {
+  margin: 3vh auto 5vh auto;
+  padding: 2vh 2vw;
+  width: 80vw;
+  height: auto;
+  background: rgb(255, 255, 255);
+  border-radius: 5px;
+  border: 2px solid #colors[secondary];
+  text-align: left;
+}
+
   /* Styles for the sections within the submission menu */
   .section {
     flex: 1;
-    width: @sectionWidth;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -100,17 +110,43 @@
     }
   
     .ant-select-dropdown {
+      flex: auto;
       background-color: transparent; /* Light blue background for dropdown menu */
+      
       .ant-select-item {
         padding: 8px 15px;
         font-size: 1.2em;
         font-weight: 600;
         color: white; /* Default text color */
+        margin-bottom: 5px; /* Add margin to create space between items */
       }
     }
   }
 
+  
   // Applying the styles to buttion name in top-bar
   .AddFeedback, .Grades{
     .top-bar;
+  }
+
+  #replay-btn {
+    flex-direction: column;
+    width: fit-content;
+    align-self: center;
+    height: 45px;
+    margin: 20px 50px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    background-color: #colors[quaternary];
+    color: #colors[text-primary];
+    font-size: 15px;
+    font-weight: 600;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.377);
+  
+    &:hover {
+      background-color: #colors[quinary];
+    }
   }
