Make "Add Feedback" button work

--- a/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
+++ b/client/src/views/Mentor/Classroom/Submissions/TeacherSubmission.less
@@ -57,6 +57,26 @@
   cursor: pointer;
 }
 
+.modal{
+  background-color: @lightBlue; 
+  position: fixed;
+  margin-top: 270px;
+}
+
+.modal-title{
+  font-family:  Arial, Helvetica, sans-serif; 
+  text-align: center;
+  font-size: 16px; 
+  color: #454545; 
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.modal-body{
+  width: 210px; 
+  height: 110px; 
+}
+
 .Rubric-button{
   background-color: transparent; 
   display: flex;                 
